# rustchristmasdb

./: Cargo.toml  README.md
benches/: loading.rs
src/: aggregator.rs  bitmap_row_iterable_provider.rs  chunk_array.rs  datastore.rs  dictionary_provider.rs  lib.rs  main.rs  point_dictionary.rs  point_list_aggregates_result.rs  query.rs  query_engine.rs  row_iterable_provider.rs  row_mapping.rs
tests/: integration_test.rs  read_csv.rs
